--- a/papers/lambda2023/02intro.tex
+++ b/papers/lambda2023/02intro.tex
@@ -11,12 +11,12 @@
     \begin{subfigure}[t]{0.45\textwidth}
       \begin{minipage}{0.7\textwidth}
       \includegraphics[width=1\textwidth]{220px-Alonzo_Church.jpg}\\
-            Alonzo Church (1903--1995)
+            Алонзо Чёрч (1903--1995)
       \end{minipage}
     \end{subfigure}
     \begin{subfigure}[t]{0.45\textwidth}
       \vspace{-5em}   % TODO: dirty hack!
-  Алонзо Чёрч 1935   открыл $\lambda$-исчисление
+  Алонзо Чёрч в 1935   открыл $\lambda$-исчисление
 \vspace{1em}
 
 Аналогичный подход от А.~Тьюринга с его машинами Тьюринга
