--- a/papers/lambda2023/lambda2024.tex
+++ b/papers/lambda2023/lambda2024.tex
@@ -116,6 +116,14 @@
 \end{thebibliography}
 \end{frame}
 
+\begin{frame}{Вопросы к экзамену для ТП}
+\begin{enumerate}
+	\item Основные определения лямбда-исчисление. Язык, редекс, стратегия, подстановка, каррирование. Формулировка тезиса Чёрча-Тьюринга.
+	\item Определение и интуиция за нумералами Чёрча. Определение арифметических операций. 
+	Трассировка сложения и умножения 2 на 2 на листочке.
+	\item Ветвления с помощью $\lambda$-исчисления. Идея за комбинатором неподвижной точки. Набросок реализации факториала
+\end{enumerate}
+\end{frame}
 %\appendix
 
 %\input{appendix.tex}
