--- a/papers/lambda2023/02intro.tex
+++ b/papers/lambda2023/02intro.tex
@@ -117,7 +117,7 @@ $\lambda$-исчисление можно использовать как фор
 Программы конечны и состоят из символов следующего вида.
 \begin{enumerate}
 \item Переменные, в слайдах будем их обозначать строчными латинскими буквами
-\item Скобки открывающиеся \texttt{(} и закрывающиеся \texttt{)}
+\item Скобки закрывающиеся \texttt{)} и открывающиеся \texttt{(}
 \item Точка как разделитель
 \item Символ $\lambda$
 \end{enumerate}
@@ -136,6 +136,7 @@ $\lambda$-исчисление можно использовать как фор
       $A$ --- $\lambda$-выражение, \\
       а $\nu$ --- произвольное имя переменной
       \item Применение $(AB)$, где $A$ и $B$ --- $\lambda$-выражения
+      \item Ничего больше нет
     \end{itemize}
 %    \begin{definition}{Редекс}
 %      --- это $\lambda$-выражение вида $(\lambda \nu. A)B$
@@ -226,7 +227,7 @@ $\lambda$-исчисление можно использовать как фор
 }
 \begin{itemize}
   \item свободные вхождения
-  \item связанных вхождения и т.д.
+  \item связанные вхождения и т.д.
 \end{itemize}
 
 \footnotetext{TODO: сказать про скобочки}
