--- a/_posts/2024-05-28-summer-school-2024.markdown
+++ b/_posts/2024-05-28-summer-school-2024.markdown
@@ -2,7 +2,8 @@
 layout: post
 title: "Летняя школа на матмехе 2024"
 date: 2024-05-28
-categories: teaching
+categories: teaching, russian
+permalink: /2024/summer_school
 ---
 
 Бытует мнение, что любой программист мечтает написать написать свой язык программирования, свою игру, и свой фреймворк для создания интерфейсов. В этом проекте вы можете получить знания, чтобы закрыть первый гештальт.
@@ -12,9 +13,11 @@ categories: teaching
 * переменные, ветвления, циклы;
 * если успеем --- функции;
 * если успеем --- массивы как единственная структура данных.
+
 Планируется создать простой компилятор "от печки" из следующих шагов:
 * Синтаксический анализ (i.e. парсер) вручную рекурсивным спуском.
   Никаких грамматик в форме БНФ или генераторов парсеров для простого компилятора не нужно. (Вполне возможно, что для настоящего тоже не нужно :) ) Мук выбора при дизайне синтаксиса не будет, у всех будет один, заранее заготовленный, синтаксис.
+
   В принципе, можно эту часть сделать потом, или совсем пропустить, но тогда будет не очень удобно тестировать.
 * Простое промежуточное представление.
   Скорее всего настолько простое, что вырожденное. Самым содержательным должно оказаться преобразование сложные арифметический выражений в простые, например, `x:=a*b+c` в `t1:=a*b; x:=t1*c`, но можно даже без этого.
@@ -26,12 +29,12 @@ categories: teaching
 
 #### Мне скучно делать ещё один паскаль....
 Созданием компиляторов люди занимаются много лет, и сразу делать что-то современное сложно. Поэтому тема формулируется в первую очередь как образовательная, а не проектная.
-Светлой целью (с) я вижу студентов, которые защищают изменения в компилятор [OCaml](https://github.com/ocaml/ocaml/pulls) как ВКР. Чтобы дорасти до такого топового уровня можно:
-* скрещивать OCaml и Rust [раз][1], [два][2] и [статья][3]
-* добавлять топовые оптимизации ([статья 2023][5])
-* ускорять OCaml под RISC V (например, интринсиками в качестве [учебной практики][4])
-* делать свой OCaml, где можно [грабить караваны](https://wikireality.ru/wiki/Грабить_корованы). Созданием альтернативных компиляторов известных языков занимался много кто (вот для [Си][6] и [Haskell][7]), для OCaml пока не вполне есть.
-* прикручивать к OCaml порождение кода с помощью LLVM (так, чтобы это было эффективнее, чем без LLVM, sic!)
+Светлой целью (с) я вижу студентов, которые защищают изменения в компилятор [OCaml](https://github.com/ocaml/ocaml/pulls) как ВКР. Чтобы дорасти до такого топового уровня можно...
+* Скрещивать OCaml и Rust ([раз][1], [два][2] и [статья][3]).
+* Добавлять топовые оптимизации ([статья 2023][5]).
+* Ускорять OCaml под RISC V (например, интринсиками в качестве [учебной практики][4]).
+* Делать свой OCaml, где можно [грабить корованы](https://wikireality.ru/wiki/Грабить_корованы). Созданием альтернативных компиляторов известных языков занимался много кто (вот для [Си][6] и [Haskell][7]), для OCaml пока не вполне есть.
+* прикручивать к OCaml порождение кода с помощью LLVM (так, чтобы это было эффективнее, чем без LLVM, sic!).
 
 
 #### Технологии
@@ -44,10 +47,23 @@ categories: teaching
 
 Очень полезно иметь представление о том, как работает компилятор, которым вы компилируете свои программы. К тому же мы --- кафедра системного программирования, а не строительства сайтов. После летней школы, темы компиляторов можно развивать в 100500 учебных практик.
 
+#### Пожелания к кандидатам
+
+* Любить сидеть в терминале GNU/Linux (на худой конец, в WSL).
+* Основы представления данных: байт, бит, машинное слово, представление целых чисел, в перспрективе представление чисел с плавающей точкой.
+* Представлять как компилируются программы на голом Си (понятия рантайма, объектного файла, линковки, умение из исполняемого файла получить его листинг ассемблера).
+* Быть готовым не бояться ассемблера. Например, можно полистать начало этой [книжки](https://www.amazon.com/Low-Level-Programming-Assembly-Execution-Architecture/dp/1484224027).
+
 {::comment}
 #### Зачем оно Ядру?
 
 Было бы неплохо, чтобы студенты имели общее представление о компиляторах, это должно увеличить привлекательность околокомпиляторных вакансий. Да, отдельные курсы про это читаются, но поздно (3-4 год бакалавриата), и если начать рассказывать про это пораньше, то больше человек будут этим интересоваться на практиках.
+
+
+**Пожелания**. Желательно, чтобы вы Qt/QML до этого видели.
+
+**Требования**. Без знакомства с С++ будет тяжело.
+
 {:/comment}
 
 [1]: https://blog.janestreet.com/oxidizing-ocaml-locality
@@ -57,10 +73,5 @@ categories: teaching
 [5]: https://icfp23.sigplan.org/details/ocaml-2023-papers/8/Efficient-OCaml-compilation-with-Flambda-2
 [6]: https://cyberleninka.ru/article/n/proekt-rusi-dlya-obucheniya-i-sozdaniya-vysokonadezhnyh-programmnyh-sistem
 [7]: Intel Haskell Compiler  https://github.com/IntelLabs/flrc
-
-
-**Пожелания**. Желательно, чтобы вы Qt/QML до этого видели.
-
-**Требования**. Без знакомства с С++ будет тяжело.
 
 
